# Wav_to_Mp3_Encoder

./: CMakeLists.txt  README.md  wav2mp3.sln  wav2mp3.vcxproj
dependencyLinux/: CMakeLists.txt
dependencyWin/mp3lame_x64-windos-static/lib/: libmp3lame-static.lib  libmpghip-static.lib
dependencyWin/pthreads_x64-windows-static/lib/: pthreadVC3.lib
include/: CMakeLists.txt  files_list.h  header_reader.h  mp3_encoder.h  thread_helper.h
src/: CMakeLists.txt  main.cpp  mp3_encoder.cpp  thread_helper.cpp
